--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -7,7 +7,7 @@
         {% endif %}
     </div>
     <div class="col-2 row align-items-center">
-        <button type="button" class="btn btn-outline-primary">Apply</button>
+        <a href="mailto:hello@jovian.ai?subject=Application%20for%20{{job['title']}}&body=Name%3A%20%3CYour%20name%3E%0D%0AResume%3A%20%3CResume%20link%3E%0D%0ALinked%20In%3A%20%3CLinkedin%20link%3E" type="button" class="btn btn-outline-primary">Apply</a>
     </div>
     
 </div>
