--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,10 @@
 <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+        <li class="nav-item"><a href="https://google.com" target= "_blank" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="https://about.google/stories/" target= "_blank" class="nav-link px-2 text-body-secondary">Stories</a></li>
+        <li class="nav-item"><a href="https://about.google/products/" target= "_blank" class="nav-link px-2 text-body-secondary">Products</a></li>
+        <li class="nav-item"><a href="https://google.com/about" target= "_blank" class="nav-link px-2 text-body-secondary">About</a></li>
       </ul>
       <p class="text-center text-body-secondary">&copy; 2024 Jovian, Inc</p>
     </footer>
