--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
                 {% endfor %}
             </div>
             <div class="text-center">
-                <button class="btn btn-primary btn-lg">Contact Us</button>
+                <a href="mailto:hello@jovian.ai?subject=Question%20about%20job%20openings&body=Name%3A%20%3CYour%20name%3E%0D%0AMy%20questions%3A%20%3CWrite%20your%20questions%20here%3E" class="btn btn-primary btn-lg">Contact Us</a>
             </div>
         </div>
         {% include 'footer.html' %}
