--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -1,5 +1,5 @@
 <h4>Application form</h4>
-<form action="/job/{{job['id']}}/apply">
+<form action="/job/{{job['id']}}/apply" method="post">
     <div class="mb-2">
         <label>Full name</label><br>
         <input type="text" name="full_name" placeholder="Robert Downey">
@@ -11,6 +11,18 @@
     <div class="mb-2">
         <label>LinkedIn</label><br>
         <input type="text" name="linkedin_url" placeholder="https://linkedin/robertdowney">
+    </div>
+    <div class="mb-2">
+        <label>Education</label><br>
+        <textarea name="education"></textarea>
+    </div>
+    <div class="mb-2">
+        <label>Work experience</label><br>
+        <textarea name="work_experience"></textarea>
+    </div>
+    <div class="mb-2">
+        <label>Resume URL</label><br>
+        <input type="text" name="resume_url">
     </div>
     <input type="submit">
 </form>
