--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -2,15 +2,15 @@
 <form action="/job/{{job['id']}}/apply" method="post">
     <div class="mb-2">
         <label>Full name</label><br>
-        <input type="text" name="full_name" placeholder="Robert Downey">
+        <input type="text" required name="full_name" placeholder="Robert Downey">
     </div>
     <div class="mb-2">
         <label>Email</label><br>
-        <input type="text" name="email" placeholder="robertdowney@gmail.com">
+        <input type="email" required name="email" placeholder="robertdowney@gmail.com">
     </div>
     <div class="mb-2">
         <label>LinkedIn</label><br>
-        <input type="text" name="linkedin_url" placeholder="https://linkedin/robertdowney">
+        <input type="url" name="linkedin_url" placeholder="https://linkedin/robertdowney">
     </div>
     <div class="mb-2">
         <label>Education</label><br>
@@ -22,7 +22,7 @@
     </div>
     <div class="mb-2">
         <label>Resume URL</label><br>
-        <input type="text" name="resume_url">
+        <input type="url" name="resume_url">
     </div>
     <input type="submit">
 </form>
