Added a new page for new jobs addition

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,6 +5,7 @@
         <li class="nav-item"><a href="https://about.google/stories/" target= "_blank" class="nav-link px-2 text-body-secondary">Stories</a></li>
         <li class="nav-item"><a href="https://about.google/products/" target= "_blank" class="nav-link px-2 text-body-secondary">Products</a></li>
         <li class="nav-item"><a href="https://google.com/about" target= "_blank" class="nav-link px-2 text-body-secondary">About</a></li>
+        <li class="nav-item"><a href="/jobs/add" target= "_blank" class="nav-link px-2 text-body-secondary">Add Jobs</a></li>
       </ul>
       <p class="text-center text-body-secondary">&copy; 2024 Jovian, Inc</p>
     </footer>
