--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -1,5 +1,37 @@
-<h4>Application form</h4>
+<h4 style="text-align: center;">Application form</h4>
 <form action="/job/{{job['id']}}/apply" method="post">
+    <div class="row">
+        <div class="mb-3 col-6">
+            <label for="exampleInputEmail1" class="form-label">Full Name</label>
+            <input type="text" class="form-control" required name="full_name" placeholder="Robert Downey" id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3 col-6">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" required name="email" placeholder="robertdowney@gmail.com">
+        </div>
+    </div>
+    <div class="row">
+        <div class="mb-3 col-6">
+            <label for="exampleInputEmail1" class="form-label">linkedIn url</label>
+            <input type="text" class="form-control" required type="url" name="linkedin_url" placeholder="https://linkedin/robertdowney">
+        </div>
+        <div class="mb-3 col-6">
+            <label for="exampleInputEmail1" class="form-label">Resume url</label>
+            <input type="text" class="form-control" required type="url" name="resume_url">
+        </div>
+    </div>
+    <div class="form-floating mb-3">
+        <textarea class="form-control" placeholder="Leave a comment here" name="education" id="floatingTextarea2" style="height: 100px"></textarea>
+        <label for="floatingTextarea2">Education</label>
+    </div>
+    <div class="form-floating mb-3">
+        <textarea class="form-control" placeholder="Leave a comment here" name="work_experience" id="floatingTextarea2" style="height: 100px"></textarea>
+        <label for="floatingTextarea2">Work experience</label>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+<!-- <form action="/job/{{job['id']}}/apply" method="post">
     <div class="mb-2">
         <label>Full name</label><br>
         <input type="text" required name="full_name" placeholder="Robert Downey">
@@ -25,4 +57,4 @@
         <input type="url" name="resume_url">
     </div>
     <input type="submit">
-</form>
+</form> -->
