--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -7,7 +7,7 @@
         {% endif %}
     </div>
     <div class="col-2 row align-items-center">
-        <a href="/job/{{job['id']}}" target="_blank" type="button" class="btn btn-outline-primary">Apply</a>
+        <a href="/job/{{job['id']}}" target="_blank" type="button" class="btn btn-outline-primary">View Job</a>
     </div>
     
 </div>
